src/syntax_analysis/expression/pratt_parsing/call_expression/tests/snapshots/rust_monkey_interpreter__syntax_analysis__expression__pratt_parsing__call_expression__tests__test_syntax_analysis_for_call_expression_case1.snap
---
source: src/syntax_analysis/expression/pratt_parsing/call_expression/tests/mod.rs
expression: "crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::get_tokens(code))"
---
AbstractSyntaxTree {
    abstract_syntax_tree: [
        EXPRESSION {
            expression: CALL {
                function: IDENTIFIER {
                    identifier_token: IDENTIFIER {
                        literal: "add",
                    },
                },
                arguments: [
                    INTEGER {
                        integer_token: INTEGER {
                            literal: "5",
                        },
                    },
                    INTEGER {
                        integer_token: INTEGER {
                            literal: "12",
                        },
                    },
                ],
            },
        },
    ],
    syntax_parsing_errors: [],
}
